Fixed date and time picker overflow

--- a/src/popup/styles/popup_page.less
+++ b/src/popup/styles/popup_page.less
@@ -306,9 +306,18 @@ body {
 .time-input__timepicker,
 .date-input__datepicker {
   position: absolute;
-  left: 0; top: 100%;
-  margin-top: 10px;
+  bottom: 100%;
+  margin-bottom: 10px;
   z-index: 2;
+}
+
+.time-input__timepicker {
+  right: 0px;
+}
+
+.date-input__datepicker {
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .timepicker {
@@ -328,13 +337,23 @@ body {
 .timepicker__arrow,
 .datepicker__arrow {
   position: absolute;
-  left: 10px; top: -5px;
+  bottom: -5px;
+  
   width: 10px; height: 10px;
   z-index: 0;
 
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
   transform: rotate(45deg);
+}
+
+.timepicker__arrow {
+  right: 10px;
+}
+
+.datepicker__arrow {
+  left: 50%;
+  margin-left: -5px
 }
 
 .timepicker__content,
